Open source that shit

--- a/public/index.html
+++ b/public/index.html
@@ -115,7 +115,7 @@
         </p>
         <h1>Fork me on GitHub</h1>
         <p>
-          The code will eventually be available on 
+          The code for this site is available on 
           <a href="https://github.com/hnrc/aula" target="_blank">GitHub</a>
           if you are interested in the bits and pieces that is going on 
           under the hood.
