--- a/public/index.html
+++ b/public/index.html
@@ -105,9 +105,10 @@
     <div class="row item about-wrapper">
       <div class="col-sm-offset-2 col-sm-8 col-xs-12">
         <p>
-          Aula.io is an ambitious attempt at collecting and indexing good and 
-          interesting tech talks, making them categorizable, searchable and 
-          most importantly easy to find and watch.
+          <a href="#">Aula.io</a> is an ambitious attempt at 
+          collecting and indexing good and interesting tech talks, 
+          making them categorizable, searchable and  most importantly 
+          easy to find and watch.
         </p>
         <p>
           The focus will be on talks in the programming and software development
@@ -118,7 +119,9 @@
           The code for this site is available on 
           <a href="https://github.com/hnrc/aula" target="_blank">GitHub</a>
           if you are interested in the bits and pieces that is going on 
-          under the hood.
+          under the hood. It is really a very thin layer of 
+          <a href="http://nodejs.org/" target="_blank">Node.js</a> on top of 
+          <a href="http://orchestrate.io/" target="_blank">Orchestrate.io</a>.
         </p>
         <h1>Wanna help out with content?</h1>
         <p>
