Add some lol to the description metadata fields

--- a/public/index.html
+++ b/public/index.html
@@ -5,9 +5,9 @@
   <meta charset="utf-8">
   <meta name="og:title" property="og:title" content="Aula.io" />
   <meta name="og:url" property="og:url" content="http://aula.io" />
-  <meta name="og:site_name" property="og:site_name" content="aula.io" />
-  <meta name="og:description" property="og:description" content="Tech talks from allover in one place" />
-  <meta name="description" content="Tech talks from allover in one place">
+  <meta name="og:site_name" property="og:site_name" content="Aula.io" />
+  <meta name="og:description" property="og:description" content="Index all the awesome tech talks \o/" />
+  <meta name="description" content="Index all the awesome tech talks \o/">
   <meta name="viewport" content="user-scalable=no, width=device-width, initial-scale=1, maximum-scale=1">
   <link rel="stylesheet" type="text/css" href="//netdna.bootstrapcdn.com/bootstrap/3.1.1/css/bootstrap.min.css">
   <link rel="stylesheet" type="text/css" href="//netdna.bootstrapcdn.com/font-awesome/4.0.3/css/font-awesome.css">
