Put words in order to hopefully make sense

--- a/public/index.html
+++ b/public/index.html
@@ -125,10 +125,9 @@
         </p>
         <h1>Wanna help out with content?</h1>
         <p>
-          You are extremely welcome to tweet me at 
-          <a href="https://twitter.com/hnrc" target="_blank">@hnrc</a>
-          with URLs to talks that you should be on here. I would really really 
-          really appreciate it <i class="fa fa-heart"></i>.
+          You are extremely welcome to tweet me  
+          (<a href="https://twitter.com/hnrc" target="_blank">@hnrc</a>)
+          URLs to talks that should be listed here. Thanks <i class="fa fa-heart"></i>.
         </p>
         <h1>Contact</h1>
         <p>
