Add contributors section :heart:

--- a/public/index.html
+++ b/public/index.html
@@ -105,8 +105,9 @@
     <div class="row item about-wrapper">
       <div class="col-sm-offset-2 col-sm-8 col-xs-12">
         <p>
-          <a href="#">Aula.io</a> is an ambitious attempt at 
-          collecting and indexing good and interesting tech talks, 
+          <a href="#">Aula.io</a> is an ambitious attempt by 
+          <a href="http://henricenglund.se" target="_blank">Henric Englund</a> 
+          at collecting and indexing good and interesting tech talks, 
           making them categorizable, searchable and  most importantly 
           easy to find and watch.
         </p>
@@ -125,16 +126,17 @@
         </p>
         <h1>Wanna help out with content?</h1>
         <p>
-          You are extremely welcome to tweet me  
-          (<a href="https://twitter.com/hnrc" target="_blank">@hnrc</a>)
-          URLs to talks that should be listed here. Thanks <i class="fa fa-heart"></i>.
+          I really appreciate all help in finding awesome talks that should be listed here. 
+          Please <a href="https://twitter.com/hnrc" target="_blank">tweet me</a> URLs. 
+          Thanks! <i class="fa fa-heart"></i>
         </p>
-        <h1>Contact</h1>
+        <h1>Contributors</h1>
         <p>
           <ul>
-            <li><a href="http://henricenglund.se" target="_blank">henricenglund.se</a></li>
-            <li><a href="https://twitter.com/hnrc" target="_blank">twitter.com/hnrc</a></li>
-            <li><a href="https://github.com/hnrc" target="_blank">github.com/hnrc</a></li>
+            <li><a href="https://github.com/mateusz-fiolka" target="_blank">Mateusz Fiołka</a></li>
+            <li><a href="https://github.com/snurra" target="_blank">Gustaf Forslund</a></li>
+            <li><a href="https://twitter.com/chids" target="_blank">Mårten Gustafson</a></li>
+            <li><a href="https://github.com/kristiany" target="_blank">Kristian Yrjölä</a></li>
           </ul>
         </p>
       </div>
