Hide search form for small screens

--- a/public/index.html
+++ b/public/index.html
@@ -35,7 +35,7 @@
           <li class="menu-tags"><a href="#tags">Tags</a></li>
           <li class="menu-about"><a href="#about">About</a></li>
         </ul>
-        <form class="navbar-form navbar-right navbar-collapse" id="search" role="search">
+        <form class="navbar-form navbar-right navbar-collapse visible-xs visible-md visible-lg" id="search" role="search">
           <div class="form-group">
             <input type="text" class="form-control" id="input-search" placeholder="Search">
           </div>
