Add a cute little welcome top banner

--- a/public/index.html
+++ b/public/index.html
@@ -12,6 +12,7 @@
   <link rel="stylesheet" type="text/css" href="//netdna.bootstrapcdn.com/bootstrap/3.1.1/css/bootstrap.min.css">
   <link rel="stylesheet" type="text/css" href="//netdna.bootstrapcdn.com/font-awesome/4.0.3/css/font-awesome.css">
   <link rel="stylesheet" type="text/css" href="//fonts.googleapis.com/css?family=Lobster">
+  <link rel="stylesheet" type="text/css" href="//fonts.googleapis.com/css?family=Open+Sans:300,700">
   <link rel="stylesheet" type="text/css" href="lumen.bootstrap.min.css">
   <link rel="stylesheet" type="text/css" href="spinner.css">
   <link rel="stylesheet" type="text/css" href="aula.css">
@@ -104,6 +105,13 @@
       <span class="badge"><i class="fa fa-play"></i></span>
       <a class="list-title" href="#${$item.basePath}/${slug}">${title}</a>
     </li>
+  </script>
+  <script id="home-template" type="text/x-jquery-tmpl">
+    <div class="row item home-wrapper visible-md visible-lg">
+      <div class="col-sm-offset-2 col-sm-8 col-xs-12">
+        <a href="#about"><span class="logo">Aula.io</span> &ndash; The best of tech talks in one place</a>.
+      </div>
+    </div>
   </script>
   <script id="about-template" type="text/x-jquery-tmpl">
     <div class="row item about-wrapper">
