--- a/public/index.html
+++ b/public/index.html
@@ -149,6 +149,7 @@
             <li><a href="https://github.com/snurra" target="_blank">Gustaf Forslund</a></li>
             <li><a href="https://twitter.com/chids" target="_blank">Mårten Gustafson</a></li>
             <li><a href="https://github.com/kristiany" target="_blank">Kristian Yrjölä</a></li>
+            <li><a href="https://github.com/kagrela" target="_blank">Kamil Grela</a></li>
           </ul>
         </p>
       </div>
