--- a/public/index.html
+++ b/public/index.html
@@ -147,8 +147,8 @@
           <ul>
             <li><a href="https://github.com/mateusz-fiolka" target="_blank">Mateusz Fiołka</a></li>
             <li><a href="https://github.com/snurra" target="_blank">Gustaf Forslund</a></li>
-            <li><a href="https://twitter.com/chids" target="_blank">Mårten Gustafson</a></li>
-            <li><a href="https://github.com/kristiany" target="_blank">Kristian Yrjölä</a></li>
+            <li><a href="https://twitter.com/chids" target="_blank">M&aring;rten Gustafson</a></li>
+            <li><a href="https://github.com/kristiany" target="_blank">Kristian Yrj&ouml;l&auml;</a></li>
             <li><a href="https://github.com/kagrela" target="_blank">Kamil Grela</a></li>
           </ul>
         </p>
