Drop Orchestrate references

--- a/public/index.html
+++ b/public/index.html
@@ -132,14 +132,15 @@
           The code for this site is available on 
           <a href="https://github.com/hnrc/aula" target="_blank">GitHub</a>
           if you are interested in the bits and pieces that is going on 
-          under the hood. It is really a very thin layer of 
+          under the hood. It is basically a thin layer of data crunching  
           <a href="http://nodejs.org/" target="_blank">Node.js</a> on top of 
-          <a href="http://orchestrate.io/" target="_blank">Orchestrate.io</a>.
+          static JSON files.
         </p>
         <h1>Wanna help out with content?</h1>
         <p>
-          I really appreciate all help in finding awesome talks that should be listed here. 
-          Please <a href="https://twitter.com/hnrc" target="_blank">tweet me</a> URLs. 
+          I really appreciate all help in finding awesome talks. 
+          Please <a href="https://twitter.com/hnrc" target="_blank">tweet me</a> URLs
+          or even better, <a href="https://github.com/hnrc/aula" target="_blank">send a pull request</a>.
           Thanks! <i class="fa fa-heart"></i>
         </p>
         <h1>Contributors</h1>
