--- a/public/index.html
+++ b/public/index.html
@@ -125,7 +125,7 @@
         </p>
         <p>
           The focus will be on talks in the programming and software development
-          field, with everything that belongs to that like culture and organizational stuff.
+          field, including culture and organizational stuff.
         </p>
         <h1>Fork me on GitHub</h1>
         <p>
