--- a/public/index.html
+++ b/public/index.html
@@ -151,6 +151,7 @@
             <li><a href="https://twitter.com/chids" target="_blank">M&aring;rten Gustafson</a></li>
             <li><a href="https://github.com/kristiany" target="_blank">Kristian Yrj&ouml;l&auml;</a></li>
             <li><a href="https://github.com/kagrela" target="_blank">Kamil Grela</a></li>
+            <li><a href="https://github.com/inem" target="_blank">Ivan Nemytchenko</a></li>
           </ul>
         </p>
       </div>
