Add @stpe as contributor

--- a/public/index.html
+++ b/public/index.html
@@ -152,6 +152,7 @@
             <li><a href="https://github.com/kristiany" target="_blank">Kristian Yrj&ouml;l&auml;</a></li>
             <li><a href="https://github.com/kagrela" target="_blank">Kamil Grela</a></li>
             <li><a href="https://github.com/inem" target="_blank">Ivan Nemytchenko</a></li>
+            <li><a href="https://github.com/stpe" target="_blank">Stefan Pettersson</a></li>
           </ul>
         </p>
       </div>
