--- a/public/index.html
+++ b/public/index.html
@@ -153,6 +153,7 @@
             <li><a href="https://github.com/kagrela" target="_blank">Kamil Grela</a></li>
             <li><a href="https://github.com/inem" target="_blank">Ivan Nemytchenko</a></li>
             <li><a href="https://github.com/stpe" target="_blank">Stefan Pettersson</a></li>
+            <li><a href="https://github.com/linusno" target="_blank">Linus Nordstr&ouml;m</a></li>
           </ul>
         </p>
       </div>
