--- a/public/index.html
+++ b/public/index.html
@@ -9,6 +9,7 @@
   <meta name="og:description" property="og:description" content="The best of tech talks in one place \o/" />
   <meta name="description" content="The best of tech talks in one place. \o/">
   <meta name="viewport" content="user-scalable=no, width=device-width, initial-scale=1, maximum-scale=1">
+  <link rel="alternate" type="application/rss+xml" title="Aula.io RSS" href="http://www.aula.io/feed.xml"/>
   <link rel="stylesheet" type="text/css" href="//netdna.bootstrapcdn.com/bootstrap/3.1.1/css/bootstrap.min.css">
   <link rel="stylesheet" type="text/css" href="//netdna.bootstrapcdn.com/font-awesome/4.0.3/css/font-awesome.css">
   <link rel="stylesheet" type="text/css" href="//fonts.googleapis.com/css?family=Lobster">
